--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "yiisoft/yii2-queue": "~2.0.0",
         "yiisoft/yii2-redis": "~2.0.0",
         "dmstr/yii2-adminlte-asset": "2.*",
-        "kartik-v/yii2-widget-datetimepicker": "*"
+        "kartik-v/yii2-widget-datetimepicker": "*",
+        "overtrue/wechat": "~3.1"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
