--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "yiisoft/yii2-redis": "~2.0.0",
         "dmstr/yii2-adminlte-asset": "2.*",
         "kartik-v/yii2-widget-datetimepicker": "*",
-        "overtrue/wechat": "~3.1",
+        "overtrue/wechat": "3.3.12",
 	"doctrine/cache": "1.6.2"
     },
     "require-dev": {
