--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0",
         "yiisoft/yii2-queue": "~2.0.0",
         "yiisoft/yii2-redis": "~2.0.0",
+        "guzzlehttp/guzzle": "~6.0",
         "dmstr/yii2-adminlte-asset": "2.*",
         "kartik-v/yii2-widget-datetimepicker": "*",
         "overtrue/wechat": "3.3.13",
